--- a/index (2).html
+++ b/index (2).html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Design Your Website With Background Video</title>
+        <title>Best Album img</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
